<resources>
    <string name="app_name">TravelLeaflet</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_pw">Password</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_signup">Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_proper_auth_info">Email or Password is invalid!</string>

    <string name="confirm_email">Enter Email Again</string>
    <string name="confirm_pw">Enter Password Again</string>

    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="error_creating_new_account">Failed to create a new account :( Please try again</string>
    <string name="error_field_required">Enter all the fields!</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">Enter a valid email!</string>
    <string name="error_email_mismatch">Enter the same email address!</string>
    <string name="error_invalid_password">Enter a valid password!</string>
    <string name="error_pw_mismatch">Enter the same password!</string>
    <string name="error_invalid_name">Enter your first and last name separated by a space!</string>
    <string name="error_empty_name">Enter your name!</string>
    <string name="title_activity_photo">Add photo to event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_leaflet_main">LeafletMainActivity</string>
    <string name="title_activity_leaflet_checklist">Item-to-bring Checklist</string>
    <string name="item_type">Type</string>
    <string name="item_name">Name</string>
    <string name="item_count">Count</string>
    <string name="add">Add</string>

    <string-array name="item_type_arrays">
        <item>Toiletry</item>
        <item>Electronics</item>
        <item>Tickets</item>
        <item>Documents</item>
        <item>Cloths</item>
        <item>Others</item>
    </string-array>

</resources>
